--- a/sites/all/themes/dark_elegant/style.css
+++ b/sites/all/themes/dark_elegant/style.css
@@ -898,29 +898,74 @@ input.form-text, textarea.form-textarea, select.form-select { border: 1px solid 
 
 /* Contact Form */
 
-.contact-form #edit-name { width: 100%;
-                           -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
-                           -khtml-border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; }
+.contact-form #edit-name { 
+    background-color: #3A3A3A;
+    width: 100%;
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box;
+    -khtml-border-radius: 4px; 
+    -moz-border-radius: 4px; 
+    -webkit-border-radius: 4px; 
+    border-radius: 4px;
+}
 
-.contact-form #edit-mail { width: 100%;
-                           -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
-                           -khtml-border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; }
+.contact-form #edit-mail { 
+    background-color: #3A3A3A;
+    width: 100%;
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box;
+    -khtml-border-radius: 4px; 
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+}
 
-.contact-form #edit-subject { width: 100%;
-                              -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
-                              -khtml-border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; }
+.contact-form #edit-subject {
+    background-color: #3A3A3A;
+    width: 100%;
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box;
+    -khtml-border-radius: 4px;
+    -moz-border-radius: 4px; 
+    -webkit-border-radius: 4px; 
+    border-radius: 4px; 
+}
 
-.contact-form #edit-message { width: 100%;
-                              -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
-                              -khtml-border-top-left-radius: 4px; -khtml-border-top-right-radius: 4px; -moz-border-radius-topleft: 4px;
-                              -moz-border-radius-topright: 4px; -webkit-border-top-left-radius: 4px; -webkit-border-top-right-radius: 4px;
-                              border-top-left-radius: 4px; border-top-right-radius: 4px; }
+.contact-form #edit-message {
+    background-color: #3A3A3A;
+    width: 100%;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box;
+    -khtml-border-top-left-radius: 4px; 
+    -khtml-border-top-right-radius: 4px; 
+    -moz-border-radius-topleft: 4px;
+    -moz-border-radius-topright: 4px;
+    -webkit-border-top-left-radius: 4px;
+    -webkit-border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
 
-.contact-form .resizable-textarea .grippie {  width: 100%;
-                                              -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
-                                              -khtml-border-bottom-left-radius: 4px; -khtml-border-bottom-right-radius: 4px; -moz-border-radius-bottomleft: 4px;
-                                              -moz-border-radius-bottomright: 4px; -webkit-border-bottom-left-radius: 4px; -webkit-border-bottom-right-radius: 4px;
-                                              border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; }
+.contact-form 
+.resizable-textarea 
+.grippie {  
+    width: 100%;
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box;
+    -khtml-border-bottom-left-radius: 4px; 
+    -khtml-border-bottom-right-radius: 4px; 
+    -moz-border-radius-bottomleft: 4px;
+    -moz-border-radius-bottomright: 4px;
+    -webkit-border-bottom-left-radius: 4px; 
+    -webkit-border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px; 
+    border-bottom-right-radius: 4px;
+}
 
 /* Comment form */
 
