--- a/sites/all/themes/dark_elegant/style.css
+++ b/sites/all/themes/dark_elegant/style.css
@@ -85,7 +85,7 @@ textarea {
     color: #DEDEDE;
     font-family: Open sans,sans-serif;
     font-size: 13px;
-    font-size: 1.3rem;
+    /*font-size: 1.3rem;*/
     line-height: 1.6;
 
 }
